# CrashMonitor

./: gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/leechyli/crashmonitor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeCrashHandler.h  crashMonitor.cpp
app/src/main/java/com/example/leechyli/crashmonitor/: MainActivity.java  MyApplication.java
app/src/main/java/monitor/: MonitorUtil.java  ShellUtils.java  SystemManager.java
app/src/main/java/monitor/ANR/: ANRListener.java
app/src/main/java/monitor/JavaCrash/: JavaCrashHandler.java
app/src/main/java/monitor/NativeCrash/: CrashHandler.java  NativeCrashHandler.java  NativeError.java  NativeTest.java
app/src/main/res/layout/: activity_main.xml  crashhandler.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/leechyli/crashmonitor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
